# pm-kit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/: create-project.md
.kiro/skills/create-project/: SKILL.md
.kiro/steering/pm-kit/: GUIDELINE.md
docs/: design.md
knowledge/: decision-record.md  estimation.md  note-taking.md  risk-management.md  stakeholder-management.md  story-mapping.md
prompts/: create-interview.md
scaffold/: .envrc.template  .gitignore.template  policy.md.template  project.yaml.template
scaffold/decisions/: TEMPLATE.md
scaffold/notes/: TEMPLATE.md
scaffold/prompts/: create-interview.md  daily-check.md  policy-interview.md  risk-review.md  story-map-interview.md  sync-confluence.md  sync-jira.md  sync-slack.md  system.md
scaffold/risks/: TEMPLATE.md  risk-register.md.template
scaffold/roadmap/: TEMPLATE.md  overview.md.template
scaffold/skills/: build-index.md  daily-check.md  manage-decisions.md  manage-notes.md  manage-repos.md  manage-risks.md  manage-roadmap.md  manage-story-map.md  overview.md  save-meeting.md  sync-confluence.md  sync-jira.md  sync-slack.md
src/pm_kit/: cli.py  create.py  daily.py  overview.py  project.py  schema.py  update.py
src/pm_kit/adapter/: claude.py  cli.py  kiro.py
src/pm_kit/story_map/: check.py  cli.py  io.py  render.py
src/pm_kit/sync/: cli.py  confluence.py  (+2 more)
tests/: test_adapter.py  test_cli.py  test_create.py  test_daily.py  test_overview.py  test_project.py  test_schema.py  test_story_map.py  test_sync.py  test_update.py
